--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -5,26 +5,26 @@ max-width: 1184px;
 height: 52px;
 display: flex;
 justify-content: space-between;
-align-items: end;
+align-items: center;
 }
 
 @media screen and (max-width: 1024px) {
 .header {
   padding: 28px 48px 0 48px;
-  width: calc(100% - 96px);
+  
 }
 }
 
 @media screen and (max-width: 768px) {
   .header {
     padding: 28px 24px 0 24px;
-    width: calc(100% - 48px);
+  
   }
 }
 @media screen and (max-width: 540px) {
   .header {
     padding: 16px 16px 0 16px;
     height: 42px;
-    width: calc(100% - 32px);
+
   }
 }
