--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -6,14 +6,22 @@
   gap: 16px;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1279px) {
   .photo-grid {
-    padding: 0 24px;
+    gap: 14px;
   }
   }
 
-  @media screen and (max-width: 768px) {
+@media screen and (max-width: 1023px) {
+  .photo-grid {
+    padding: 0 24px;
+    gap: 16px;
+  }
+  }
+
+  @media screen and (max-width: 767px) {
     .photo-grid {
       padding: 0 16px;
+      gap: 12px;
     }
     }
