--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -1,12 +1,13 @@
 .place__paragraph {
   font-weight: 400;
   font-size: 18px;
-    line-height: 1.63;
+    line-height: 29px;
   margin: 0;
 }
 
 @media screen and (max-width: 1023px) {
   .place__paragraph {
     font-size: 16px;
+    line-height: 26px;
   }
 }
