--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,7 +1,7 @@
 .place {
   display: grid;
   margin-bottom: 80px;
-  grid-template-columns: repeat(auto-fill, minmax(460px, 1fr));
+  grid-template-columns: 460px 1fr;
   row-gap: 48px;
   column-gap: 40px; 
   grid-template-areas:
@@ -15,13 +15,13 @@
 
 @media screen and (max-width: 1279px) {
   .place {
-    grid-template-columns: repeat(auto-fit, minmax(440px, 1fr));
+    grid-template-columns: 440px 1fr;
     column-gap: 32px; 
   }
 }
 @media screen and (max-width: 1023px) {
   .place {
-    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+    grid-template-columns: 340px 1fr;
     column-gap: 28px;  
     margin-bottom: 73px;
   }
@@ -37,11 +37,12 @@
  @media screen and (max-width: 615px) {
     .place {
       width: 100%;
+     grid-template-columns: 1fr;
       grid-template-areas:
-      
     "title" 
     "website"
     "image"
     "paragraph";
+    row-gap: 32px;
     }
   }
