добавлена ссылка на ковер, испарвлены ошибки

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -2,10 +2,10 @@
   padding: 28px 48px 0 48px;
   margin: 0 auto;
   max-width: 1184px;
-  height: 52px;
+  min-height: 52px;
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: end;
 }
 
 @media screen and (max-width: 1024px) {
@@ -23,6 +23,6 @@
 @media screen and (max-width: 540px) {
   .header {
     padding: 16px 16px 0 16px;
-    height: 42px;
+    min-height: 42px;
   }
 }
