--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -1,13 +1,16 @@
 .cover__overlay {
   width: 100%;
   height: 100%;
-  background: #2A2C2F;
-  opacity: 0.3;
+  background: #2A2C2F4D;
   position: absolute;
   top: 0;
-  z-index: 1;
+  text-decoration: none;
+  color: rgba(255, 255, 255, 1);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .cover__overlay:hover {
-  opacity: 0.8;
+  background: #2A2C2FCC;
 }
