--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -14,6 +14,7 @@
 
 @media screen and (max-width: 1023px) {
   .footer {
+    padding-top: 88px;
     margin: 0 24px;
   }
 }
@@ -23,5 +24,6 @@
     margin: 0 16px;
     flex-direction: column;
     gap: 48px;
+    padding-top: 64px;
   }
 }
