--- a/blocks/header/__lang-container/header__lang-container.css
+++ b/blocks/header/__lang-container/header__lang-container.css
@@ -1,4 +1,8 @@
 .header__lang-container {
   display: flex;
   gap: 18px;
+  list-style: none;
+  padding-left: 0;
+  padding-bottom: 3px;
+  margin: 0;
 }
