--- a/blocks/root/root.css
+++ b/blocks/root/root.css
@@ -1,7 +1,7 @@
 .root {
   max-width: 1280px;
   background: #2A2C2F;
-  font-family: 'Inter';
+  font-family: 'Inter', 'Arial', sans-serif;
   color: #fff;
   margin: 0 auto;
   min-width: 320px;
