--- a/pages/index.css
+++ b/pages/index.css
@@ -12,6 +12,7 @@
 @import url(../blocks/footer/__links/footer__links.css);
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__logo/header__logo.css);
+@import url(../blocks/header/__lang-container-item/header__lang-container-item.css);
 @import url(../blocks/header/__lang-link/header__lang-link.css);
 @import url(../blocks/header/__lang-container/header__lang-container.css);
 @import url(../blocks/intro/intro.css);
@@ -24,8 +25,11 @@
 @import url(../blocks/lead/__subtitle/lead__subtitle.css);
 @import url(../blocks/lead/__image/lead__image.css);
 @import url(../blocks/lead/__caption/lead__caption.css);
+@import url(../blocks/lead/__figure/lead__figure.css);
 @import url(../blocks/photo-grid/photo-grid.css);
 @import url(../blocks/photo-grid/__item/photo-grid__item.css);
+@import url(../blocks/photo-grid/__list/photo-grid__list.css);
+@import url(../blocks/photo-grid/__image/photo-grid__image.css);
 @import url(../blocks/place/place.css);
 @import url(../blocks/place/__title/place__title.css);
 @import url(../blocks/place/__website/place__website.css);
@@ -37,3 +41,5 @@
 @import url(../blocks/website/__url-heading/website__url-heading.css);
 @import url(../blocks/website/__link/website__link.css);
 @import url(../blocks/container/container.css);
+@import url(../blocks/intro/__span/intro__span.css);
+@import url(../blocks/header/__lang-link/header__lang-link_select.css);
