--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -1,16 +1,48 @@
 .cover__overlay {
-  width: 100%;
-  height: 100%;
-  background: #2A2C2F4D;
-  position: absolute;
-  top: 0;
-  text-decoration: none;
-  color: rgba(255, 255, 255, 1);
   display: flex;
   flex-direction: column;
   justify-content: center;
+  position: relative;
+  z-index: 0;
+  width: 100%;
+  min-height: 740px;
+  text-decoration: none;
+  color: rgba(255, 255, 255, 1);
 }
 
-.cover__overlay:hover {
-  background: #2A2C2FCC;
+.cover__overlay:before {
+  content: '';
+  display: block;
+  position: absolute;
+  background-color: #2a2c2f;
+  opacity: 0.3;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  transition: opacity 100ms ease-in-out;
 }
+
+.cover__overlay:hover::before {
+  opacity: 0.8;
+}
+
+@media screen and (max-width: 1024px) {
+  .cover__overlay {
+    min-height: 640px; 
+  }
+}
+  
+@media screen and (max-width: 768px) {
+  .cover__overlay {
+    min-height: 480px;
+  }
+}
+@media screen and (max-width: 560px) {
+  .cover__overlay {
+    min-height: 200px;
+    min-width: 320px;
+  }
+}  
+  
